数据结构——链表

--- a/algorithm/algorithm.cbp
+++ b/algorithm/algorithm.cbp
@@ -34,8 +34,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/LinkList.h" />
 		<Unit filename="include/SeqList.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/LinkList.cpp" />
 		<Unit filename="src/SeqList.cpp" />
 		<Extensions>
 			<code_completion />
